--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,18 @@ __marimo__/
 
 # macOS specific files
 .DS_Store
+
+# LaTeX auxiliary files
+*.aux
+*.bbl
+*.blg
+*.log
+*.out
+*.toc
+*.synctex.gz
+*.fdb_latexmk
+*.fls
+
+# Optionally, ignore the final PDF as well,
+# since it can be generated from the source code.
+*.pdf
